tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__UncookedSlush-AAAAAAAAAAAAAAAAAAAFzA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1484,
  "prerequisites": [
    1483
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Next step is to form this slush into the right shape. Use a Marshmallow form and press it with your iv forming press. Remember to sterilize it after using it.\n\nBe careful, you'll get blindness and hunger II holding it.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Uncooked Slush",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1483
  ],
  "rewards": [],
  "tasks": []
}
