tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__VeganLeather-AAAAAAAAAAAAAAAAAAAHiw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1931,
  "prerequisites": [
    1797
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you want to save your cows and horses for milk and ...glue... you can use Corium to make leather instead.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Vegan Leather?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1797
  ],
  "rewards": [],
  "tasks": []
}
