tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__WaterWaterEveryw-AAAAAAAAAAAAAAAAAAAGQg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1602,
  "prerequisites": [
    719
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Even though you have to plant crops near the water, they don't actually get any hydration unless you apply water manually. Make a hydration cell and use it on your crops to increase their growth speed.\n\nYou can recycle empty cells in an extractor.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Water, Water, Everywhere",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    719
  ],
  "rewards": [],
  "tasks": []
}
