tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__WaxOnWaxOff-AAAAAAAAAAAAAAAAAAAJZQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2405,
  "prerequisites": [
    718
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can take vanilla tree saplings and place them directly on crop sticks. This will give you a \"bonsai\" tree. Bonsai trees will give you drops just like a tree, but without the wasted CPU of placing all the tree blocks just to chop them down again.\n\nThis can be significant overhead on a server, so if you want to be nice, breed some bonsai trees for your pyrolyze ovens. They also drop a ton and are fast, especially statted up, so there's no reason not to if you can automate them.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Wax On, Wax Off",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    718
  ],
  "rewards": [],
  "tasks": []
}
